# BLEsp32

./: .gitignore  README.md
myApp/: CMakeLists.txt  prj.conf
myApp/src/: ble.c  main.c
